added homepage header content

--- a/0-homepage.html
+++ b/0-homepage.html
@@ -12,7 +12,13 @@
   </head>
   <body>
     <header>
-
+      <img src="images/smile_off.png" alt="whiteSmile">
+      <img src="images/logo.png" alt="logo">
+      <div>
+        <a href="#">COURSES</a>
+        <a href="#">PRICING</a>
+        <a href="#">LOGIN</a>
+      </div>
     </header>
     <main>
 
