--- a/0-homepage.html
+++ b/0-homepage.html
@@ -21,7 +21,40 @@
       </div>
     </header>
     <main>
-
+      <section>
+        <div>
+          <h1>Get schooled</h1>
+          <div>
+            <p>SMILES</p>
+            <p>GRIN</p>
+            <p>LAUGH</p>
+          </div>
+          <button>REGISTER FOR FREE</button>
+          <h3>Learn from the pros</h3>
+          <div>
+            <div class="card">
+              <img src="" alt="">
+              <h3>Phillip Massey</h3>
+              <p>« Smile of the year » 2018 - 2019</p>
+            </div>
+            <div class="card">
+              <img src="" alt="">
+              <h3>Nannie Lawrence</h3>
+              <p>Best « little smile » 2017</p>
+            </div>
+            <div class="card">
+              <img src="" alt="">
+              <h3>Bruce Walters</h3>
+              <p>Best « Friend Smile » live performance 2019</p>
+            </div>
+            <div class="card">
+              <img src="" alt="">
+              <h3>Henry Hughes</h3>
+              <p>« 24h smiles » winner 2016 - 2019</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
 
