--- a/0-homepage.html
+++ b/0-homepage.html
@@ -33,22 +33,22 @@
           <h3>Learn from the pros</h3>
           <div>
             <div class="card">
-              <img src="" alt="">
+              <img src="images/profile_1.jpg" alt="phillip">
               <h3>Phillip Massey</h3>
               <p>« Smile of the year » 2018 - 2019</p>
             </div>
             <div class="card">
-              <img src="" alt="">
+              <img src="images/profile_2.jpg" alt="nannie">
               <h3>Nannie Lawrence</h3>
               <p>Best « little smile » 2017</p>
             </div>
             <div class="card">
-              <img src="" alt="">
+              <img src="images/profile_3.jpg" alt="bruce">
               <h3>Bruce Walters</h3>
               <p>Best « Friend Smile » live performance 2019</p>
             </div>
             <div class="card">
-              <img src="" alt="">
+              <img src="images/profile_4.jpg" alt="henry">
               <h3>Henry Hughes</h3>
               <p>« 24h smiles » winner 2016 - 2019</p>
             </div>
