--- a/0-homepage.html
+++ b/0-homepage.html
@@ -23,7 +23,7 @@
       </div>
     </header>
     <main>
-      <section>
+      <section class="homepage-hero">
         <div>
           <h1>Get schooled</h1>
           <div>
@@ -34,25 +34,25 @@
           <button>REGISTER FOR FREE</button>
           <h3>Learn from the pros</h3>
           <div class="card-deck">
-            <div class="card">
-              <img src="images/profile_1.jpg" alt="phillip" class="card-img-top">
-              <h3>Phillip Massey</h3>
-              <p>« Smile of the year » 2018 - 2019</p>
+            <div class="card bg-transparent">
+              <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle">
+              <h3 class="card-title">Phillip Massey</h3>
+              <p class="card-text">« Smile of the year » 2018 - 2019</p>
             </div>
-            <div class="card">
-              <img src="images/profile_2.jpg" alt="nannie" class="card-img-top">
-              <h3>Nannie Lawrence</h3>
-              <p>Best « little smile » 2017</p>
+            <div class="card bg-transparent">
+              <img src="images/profile_2.jpg" alt="nannie" class="card-img-top rounded-circle">
+              <h3 class="card-title">Nannie Lawrence</h3>
+              <p class="card-text">Best « little smile » 2017</p>
             </div>
-            <div class="card">
-              <img src="images/profile_3.jpg" alt="bruce" class="card-img-top">
-              <h3>Bruce Walters</h3>
-              <p>Best « Friend Smile » live performance 2019</p>
+            <div class="card bg-transparent">
+              <img src="images/profile_3.jpg" alt="bruce" class="card-img-top rounded-circle">
+              <h3 class="card-title">Bruce Walters</h3>
+              <p class="card-text">Best « Friend Smile » live performance 2019</p>
             </div>
-            <div class="card">
-              <img src="images/profile_4.jpg" alt="henry" class="card-img-top">
-              <h3>Henry Hughes</h3>
-              <p>« 24h smiles » winner 2016 - 2019</p>
+            <div class="card bg-transparent">
+              <img src="images/profile_4.jpg" alt="henry" class="card-img-top rounded-circle">
+              <h3 class="card-title">Henry Hughes</h3>
+              <p class="card-text">« 24h smiles » winner 2016 - 2019</p>
             </div>
           </div>
         </div>
