made text white for hero section

--- a/0-homepage.html
+++ b/0-homepage.html
@@ -23,7 +23,7 @@
       </div>
     </header>
     <main>
-      <section class="homepage-hero">
+      <section class="homepage-hero text-white">
         <div>
           <h1>Get schooled</h1>
           <div>
@@ -33,7 +33,7 @@
           </div>
           <button>REGISTER FOR FREE</button>
           <h3>Learn from the pros</h3>
-          <div class="card-deck">
+          <div class="card-deck text-white">
             <div class="card bg-transparent">
               <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle">
               <h3 class="card-title">Phillip Massey</h3>
