made a -tag text white

--- a/0-homepage.html
+++ b/0-homepage.html
@@ -17,9 +17,9 @@
       <img src="images/smile_off.png" alt="whiteSmile">
       <img src="images/logo.png" alt="logo">
       <div>
-        <a href="#">COURSES</a>
-        <a href="#">PRICING</a>
-        <a href="#">LOGIN</a>
+        <a href="#" class="text-white">COURSES</a>
+        <a href="#" class="text-white">PRICING</a>
+        <a href="#" class="text-white">LOGIN</a>
       </div>
     </header>
     <main>
