--- a/0-homepage.html
+++ b/0-homepage.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
-    <header>
+    <header class="row">
       <img src="images/smile_off.png" alt="whiteSmile">
       <img src="images/logo.png" alt="logo">
       <div>
@@ -23,7 +23,7 @@
       </div>
     </header>
     <main>
-      <section class="homepage-hero text-white">
+      <section class="homepage-hero text-white text-center">
         <div>
           <h1>Get schooled</h1>
           <div>
