took away borders for cards

--- a/0-homepage.html
+++ b/0-homepage.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
-    <header class="row">
+    <header class="row justify-content-around">
       <img src="images/smile_off.png" alt="whiteSmile">
       <img src="images/logo.png" alt="logo">
       <div>
@@ -34,22 +34,22 @@
           <button>REGISTER FOR FREE</button>
           <h3>Learn from the pros</h3>
           <div class="card-deck text-white">
-            <div class="card bg-transparent">
+            <div class="card bg-transparent border-0">
               <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle">
               <h3 class="card-title">Phillip Massey</h3>
               <p class="card-text">« Smile of the year » 2018 - 2019</p>
             </div>
-            <div class="card bg-transparent">
+            <div class="card bg-transparent border-0">
               <img src="images/profile_2.jpg" alt="nannie" class="card-img-top rounded-circle">
               <h3 class="card-title">Nannie Lawrence</h3>
               <p class="card-text">Best « little smile » 2017</p>
             </div>
-            <div class="card bg-transparent">
+            <div class="card bg-transparent border-0">
               <img src="images/profile_3.jpg" alt="bruce" class="card-img-top rounded-circle">
               <h3 class="card-title">Bruce Walters</h3>
               <p class="card-text">Best « Friend Smile » live performance 2019</p>
             </div>
-            <div class="card bg-transparent">
+            <div class="card bg-transparent border-0">
               <img src="images/profile_4.jpg" alt="henry" class="card-img-top rounded-circle">
               <h3 class="card-title">Henry Hughes</h3>
               <p class="card-text">« 24h smiles » winner 2016 - 2019</p>
