added containers. loookss so much better

--- a/0-homepage.html
+++ b/0-homepage.html
@@ -12,11 +12,15 @@
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
-  <body>
-    <header class="row justify-content-around">
-      <img src="images/smile_off.png" alt="whiteSmile">
-      <img src="images/logo.png" alt="logo">
-      <div>
+  <body class="container">
+    <header class="container row">
+      <div class="col-sm-2">
+        <img src="images/smile_off.png" alt="whiteSmile">
+      </div>
+      <div class="col">
+        <img src="images/logo.png" alt="logo">
+      </div>
+      <div class="col">
         <a href="#" class="text-white">COURSES</a>
         <a href="#" class="text-white">PRICING</a>
         <a href="#" class="text-white">LOGIN</a>
@@ -26,14 +30,14 @@
       <section class="homepage-hero text-white text-center">
         <div>
           <h1>Get schooled</h1>
-          <div>
+          <div class="row justify-content-center">
             <p>SMILES</p>
             <p>GRIN</p>
             <p>LAUGH</p>
           </div>
           <button>REGISTER FOR FREE</button>
           <h3>Learn from the pros</h3>
-          <div class="card-deck text-white">
+          <div class="container card-deck text-white">
             <div class="card bg-transparent border-0">
               <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle">
               <h3 class="card-title">Phillip Massey</h3>
