centered header content vertically

--- a/0-homepage.html
+++ b/0-homepage.html
@@ -13,14 +13,14 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body class="container">
-    <header class="container row">
+    <header class="container row align-items-center">
       <div class="col-sm-2">
         <img src="images/smile_off.png" alt="whiteSmile">
       </div>
       <div class="col">
         <img src="images/logo.png" alt="logo">
       </div>
-      <div class="col">
+      <div class="col container">
         <a href="#" class="text-white">COURSES</a>
         <a href="#" class="text-white">PRICING</a>
         <a href="#" class="text-white">LOGIN</a>
