added margins for smiles grin laugh

--- a/0-homepage.html
+++ b/0-homepage.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body class="container">
-    <header class="container row align-items-center">
+    <header class="container row align-items-center p-3">
       <div class="col-sm-2">
         <img src="images/smile_off.png" alt="whiteSmile">
       </div>
@@ -31,12 +31,12 @@
         <div>
           <h1>Get schooled</h1>
           <div class="row justify-content-center">
-            <p>SMILES</p>
-            <p>GRIN</p>
-            <p>LAUGH</p>
+            <p class="m-3">SMILES</p>
+            <p class="m-3">GRIN</p>
+            <p class="m-3">LAUGH</p>
           </div>
           <button>REGISTER FOR FREE</button>
-          <h3>Learn from the pros</h3>
+          <h3 class="m-4">Learn from the pros</h3>
           <div class="container card-deck text-white">
             <div class="card bg-transparent border-0">
               <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle">
