--- a/0-homepage.html
+++ b/0-homepage.html
@@ -35,25 +35,25 @@
             <p class="m-3">GRIN</p>
             <p class="m-3">LAUGH</p>
           </div>
-          <button>REGISTER FOR FREE</button>
-          <h3 class="m-4">Learn from the pros</h3>
+          <button class="btn mt-2 mb-5">REGISTER FOR FREE</button>
+          <h3 class="mt-5 mb-5">Learn from the pros</h3>
           <div class="container card-deck text-white">
-            <div class="card bg-transparent border-0">
+            <div class="card bg-transparent border-0 mt-5">
               <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle">
               <h3 class="card-title">Phillip Massey</h3>
               <p class="card-text">« Smile of the year » 2018 - 2019</p>
             </div>
-            <div class="card bg-transparent border-0">
+            <div class="card bg-transparent border-0 mt-5">
               <img src="images/profile_2.jpg" alt="nannie" class="card-img-top rounded-circle">
               <h3 class="card-title">Nannie Lawrence</h3>
               <p class="card-text">Best « little smile » 2017</p>
             </div>
-            <div class="card bg-transparent border-0">
+            <div class="card bg-transparent border-0 mt-5">
               <img src="images/profile_3.jpg" alt="bruce" class="card-img-top rounded-circle">
               <h3 class="card-title">Bruce Walters</h3>
               <p class="card-text">Best « Friend Smile » live performance 2019</p>
             </div>
-            <div class="card bg-transparent border-0">
+            <div class="card bg-transparent border-0 mt-5">
               <img src="images/profile_4.jpg" alt="henry" class="card-img-top rounded-circle">
               <h3 class="card-title">Henry Hughes</h3>
               <p class="card-text">« 24h smiles » winner 2016 - 2019</p>
