added css for sizing of logo and changed column layout for header

--- a/0-homepage.html
+++ b/0-homepage.html
@@ -14,11 +14,11 @@
   </head>
   <body class="container">
     <header class="container row align-items-center p-3">
-      <div class="col-sm-2">
-        <img src="images/smile_off.png" alt="whiteSmile">
+      <div class="col-sm-1">
+        <img src="images/smile_off.png" alt="whiteSmile" class="smile">
       </div>
-      <div class="col">
-        <img src="images/logo.png" alt="logo">
+      <div class="col-sm-7">
+        <img src="images/logo.png" alt="logo" class="smile-school">
       </div>
       <div class="col container">
         <a href="#" class="text-white">COURSES</a>
@@ -35,7 +35,7 @@
             <p class="m-3">GRIN</p>
             <p class="m-3">LAUGH</p>
           </div>
-          <button class="btn mt-2 mb-5">REGISTER FOR FREE</button>
+          <button class="btn mt-2 mb-5 text-white">REGISTER FOR FREE</button>
           <h3 class="mt-5 mb-5">Learn from the pros</h3>
           <div class="container card-deck text-white">
             <div class="card bg-transparent border-0 mt-5">
