made header position absolute

--- a/0-homepage.html
+++ b/0-homepage.html
@@ -13,14 +13,14 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body class="container">
-    <header class="container row align-items-center p-3">
+    <header class="container row align-items-center p-3 homepage-header">
       <div class="col-sm-1">
         <img src="images/smile_off.png" alt="whiteSmile" class="smile">
       </div>
       <div class="col-sm-7">
         <img src="images/logo.png" alt="logo" class="smile-school">
       </div>
-      <div class="col container">
+      <div class="col-sm container">
         <a href="#" class="text-white">COURSES</a>
         <a href="#" class="text-white">PRICING</a>
         <a href="#" class="text-white">LOGIN</a>
