need to resize cards and get main section to move down

--- a/1-homepage.html
+++ b/1-homepage.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body class="container">
-    <header class="container row align-items-center p-3">
+    <header class="container row align-items-center p-3 homepage-header">
       <div class="col-sm-1">
         <img src="images/smile_off.png" alt="whiteSmile" class="smile">
       </div>
@@ -27,15 +27,17 @@
       </div>
     </header>
     <main>
-      <section class="homepage-hero text-white text-center">
-        <div>
-          <h1>Get schooled</h1>
+      <section class="homepage-hero text-white text-center mt-5">
+        <div class="container mt-5 d-flex flex-column align-items-center justify-content-center">
+          <div>
+            <h1>Get schooled</h1>
+          </div>
           <div class="row justify-content-center">
             <p class="m-3">SMILES</p>
             <p class="m-3">GRIN</p>
             <p class="m-3">LAUGH</p>
           </div>
-          <button class="btn mt-2 mb-5 text-white">REGISTER FOR FREE</button>
+          <button class="btn text-white">REGISTER FOR FREE</button>
           <h3 class="mt-5 mb-5">Learn from the pros</h3>
           <div class="container card-deck text-white">
             <div class="card bg-transparent border-0 mt-5">
