weather presenter basic formet in

--- a/1-homepage.html
+++ b/1-homepage.html
@@ -64,11 +64,14 @@
         </div>
       </section>
       <section>
-        <div class="container">
-          <img src="images/profile_5.jpg" alt="weather">
-          <blockquote class="blockquote">
+        <div class="container row">
+          <div class="col-4">
+            <img src="images/profile_5.jpg" alt="weather" class="rounded-circle">
+          </div>
+          <blockquote class="blockquote col mt-5">
             <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
-            <footer class="blockquote-footer">Person Name<cite title="weather presenter">weather presenter</cite></footer>
+            <footer class="blockquote-footer">Person Name</footer>
+            <cite title="weather presenter">weather presenter</cite>
           </blockquote>
         </div>
       </section>
