--- a/1-homepage.html
+++ b/1-homepage.html
@@ -64,16 +64,24 @@
         </div>
       </section>
       <section>
-        <div class="container row">
-          <div class="col-4">
-            <img src="images/profile_5.jpg" alt="weather" class="rounded-circle">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner container row">
+            <div class="col-4">
+              <img src="images/profile_5.jpg" alt="weather" class="rounded-circle">
+            </div>
+            <blockquote class="blockquote col mt-5">
+              <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
+              <footer class="blockquote-footer">Person Name</footer>
+              <cite title="weather presenter">weather presenter</cite>
+            </blockquote>
           </div>
-          <blockquote class="blockquote col mt-5">
-            <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
-            <footer class="blockquote-footer">Person Name</footer>
-            <cite title="weather presenter">weather presenter</cite>
-          </blockquote>
         </div>
+        <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+          <img src="images/arrow_black_left.png" alt="left">
+        </a>
+        <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
+          <img src="images/arrow_black_right.png" alt="right">
+        </a>
       </section>
     </main>
     <footer>
