--- a/1-homepage.html
+++ b/1-homepage.html
@@ -7,10 +7,10 @@
     <link href="https://fonts.googleapis.com/css?family=Coiny&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.6.0/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body class="container">
     <header class="container row align-items-center p-3 homepage-header">
@@ -40,23 +40,23 @@
           <button class="btn text-white">REGISTER FOR FREE</button>
           <h3 class="mt-5 mb-5">Learn from the pros</h3>
           <div class="container card-deck text-white">
-            <div class="card bg-transparent border-0 mt-5">
-              <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle">
+            <div class="container card bg-transparent border-0 mt-5">
+              <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Phillip Massey</h3>
               <p class="card-text">« Smile of the year » 2018 - 2019</p>
             </div>
-            <div class="card bg-transparent border-0 mt-5">
-              <img src="images/profile_2.jpg" alt="nannie" class="card-img-top rounded-circle">
+            <div class="container card bg-transparent border-0 mt-5">
+              <img src="images/profile_2.jpg" alt="nannie" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Nannie Lawrence</h3>
               <p class="card-text">Best « little smile » 2017</p>
             </div>
-            <div class="card bg-transparent border-0 mt-5">
-              <img src="images/profile_3.jpg" alt="bruce" class="card-img-top rounded-circle">
+            <div class="container card bg-transparent border-0 mt-5">
+              <img src="images/profile_3.jpg" alt="bruce" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Bruce Walters</h3>
               <p class="card-text">Best « Friend Smile » live performance 2019</p>
             </div>
-            <div class="card bg-transparent border-0 mt-5">
-              <img src="images/profile_4.jpg" alt="henry" class="card-img-top rounded-circle">
+            <div class="container card bg-transparent border-0 mt-5">
+              <img src="images/profile_4.jpg" alt="henry" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Henry Hughes</h3>
               <p class="card-text">« 24h smiles » winner 2016 - 2019</p>
             </div>
@@ -65,9 +65,9 @@
       </section>
       <section>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner container row">
+          <div class="carousel-inner container row align-items-center">
             <div class="col-4">
-              <img src="images/profile_5.jpg" alt="weather" class="rounded-circle">
+              <img src="images/profile_5.jpg" alt="weather" class="rounded-circle small-img">
             </div>
             <blockquote class="blockquote col mt-5">
               <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
