--- a/1-homepage.html
+++ b/1-homepage.html
@@ -75,13 +75,13 @@
               <cite title="weather presenter">weather presenter</cite>
             </blockquote>
           </div>
+          <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+            <img src="images/arrow_white_left.png" alt="left">
+          </a>
+          <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
+            <img src="images/arrow_white_right.png" alt="right">
+          </a>
         </div>
-        <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
-          <img src="images/arrow_black_left.png" alt="left">
-        </a>
-        <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
-          <img src="images/arrow_black_right.png" alt="right">
-        </a>
       </section>
     </main>
     <footer>
