separated carousel item structure from inner div

--- a/1-homepage.html
+++ b/1-homepage.html
@@ -65,16 +65,23 @@
       </section>
       <section class="container weather text-white">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner container row align-items-center">
-            <div class="col-2 offset-1">
-              <img src="images/profile_5.jpg" alt="weather" class="rounded-circle small-img">
+          <div class="carousel-inner">
+            <!-- first carousel item -->
+            <div class="carousel-item active">
+              <div class="container row align-items-center">
+                <div class="col-2 offset-1">
+                  <img src="images/profile_5.jpg" alt="weather" class="rounded-circle small-img">
+                </div>
+                <blockquote class="blockquote col mt-5">
+                  <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
+                  <footer class="blockquote-footer text-white">Person Name</footer>
+                  <cite title="weather presenter">weather presenter</cite>
+                </blockquote>
+              </div>
             </div>
-            <blockquote class="blockquote col mt-5">
-              <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
-              <footer class="blockquote-footer text-white">Person Name</footer>
-              <cite title="weather presenter">weather presenter</cite>
-            </blockquote>
           </div>
+
+          <!-- Carousel controls -->
           <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
             <img src="images/arrow_white_left.png" alt="left">
           </a>
