now carousel item

--- a/1-homepage.html
+++ b/1-homepage.html
@@ -79,14 +79,44 @@
                 </blockquote>
               </div>
             </div>
+            <!-- second item -->
+            <div class="carousel-item">
+              <div class="container row align-items-center">
+                <div class="col-2 offset-1">
+                  <img src="images/profile_5.jpg" alt="weather" class="rounded-circle small-img">
+                </div>
+                <blockquote class="blockquote col mt-5">
+                  <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
+                  <footer class="blockquote-footer text-white">Person Name</footer>
+                  <cite title="weather presenter">weather presenter</cite>
+                </blockquote>
+              </div>
+            </div>
+            <!-- third item -->
+            <div class="carousel-item active">
+              <div class="container row align-items-center">
+                <div class="col-2 offset-1">
+                  <img src="images/profile_5.jpg" alt="weather" class="rounded-circle small-img">
+                </div>
+                <blockquote class="blockquote col mt-5">
+                  <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
+                  <footer class="blockquote-footer text-white">Person Name</footer>
+                  <cite title="weather presenter">weather presenter</cite>
+                </blockquote>
+              </div>
+            </div>
           </div>
 
           <!-- Carousel controls -->
-          <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+          <a data-bs-target="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
             <img src="images/arrow_white_left.png" alt="left">
+            <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span> -->
           </a>
-          <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
+          <a data-bs-target="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
             <img src="images/arrow_white_right.png" alt="right">
+            <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span> -->
           </a>
         </div>
       </section>
