added styling for videocarousel arrows

--- a/2-homepage.html
+++ b/2-homepage.html
@@ -65,23 +65,104 @@
       </section>
       <section class="container weather text-white">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner container row align-items-center">
-            <div class="col-2 offset-1">
-              <img src="images/profile_5.jpg" alt="weather" class="rounded-circle small-img">
+          <div class="carousel-inner">
+            <!-- first carousel item -->
+            <div class="carousel-item active">
+              <div class="container row align-items-center">
+                <div class="col-2 offset-1">
+                  <img src="images/profile_5.jpg" alt="weather" class="rounded-circle small-img">
+                </div>
+                <blockquote class="blockquote col mt-5">
+                  <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
+                  <footer class="blockquote-footer text-white">Person Name</footer>
+                  <cite title="weather presenter">weather presenter</cite>
+                </blockquote>
+              </div>
             </div>
-            <blockquote class="blockquote col mt-5">
-              <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
-              <footer class="blockquote-footer text-white">Person Name</footer>
-              <cite title="weather presenter">weather presenter</cite>
-            </blockquote>
+            <!-- second item -->
+            <div class="carousel-item">
+              <div class="container row align-items-center">
+                <div class="col-2 offset-1">
+                  <img src="images/profile_5.jpg" alt="weather" class="rounded-circle small-img">
+                </div>
+                <blockquote class="blockquote col mt-5">
+                  <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
+                  <footer class="blockquote-footer text-white">Person Name</footer>
+                  <cite title="weather presenter">weather presenter</cite>
+                </blockquote>
+              </div>
+            </div>
+            <!-- third item -->
+            <div class="carousel-item active">
+              <div class="container row align-items-center">
+                <div class="col-2 offset-1">
+                  <img src="images/profile_5.jpg" alt="weather" class="rounded-circle small-img">
+                </div>
+                <blockquote class="blockquote col mt-5">
+                  <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
+                  <footer class="blockquote-footer text-white">Person Name</footer>
+                  <cite title="weather presenter">weather presenter</cite>
+                </blockquote>
+              </div>
+            </div>
           </div>
-          <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+
+          <!-- Carousel controls -->
+          <a data-bs-target="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
             <img src="images/arrow_white_left.png" alt="left">
+            <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span> -->
           </a>
-          <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
+          <a data-bs-target="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
             <img src="images/arrow_white_right.png" alt="right">
+            <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span> -->
           </a>
         </div>
+      </section>
+      <!-- video section -->
+      <section class="video container text-center">
+        <h3>Most popular tutorials</h3>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div id="videoCarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <!-- inner carousel -->
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/thumbnail_1.jpg" alt="">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/thumbnail_2.jpg" alt="">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/thumbnail_3.jpg" alt="">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/thumbnail_4.jpg" alt="">
+                  </div>
+                </div>
+                <!-- carousel control -->
+                <a data-bs-target="#videoCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+                  <img src="images/arrow_black_left.png" alt="left">
+                  <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span> -->
+                </a>
+                <a data-bs-target="#videoCarousel" class="carousel-control-next" role="button" data-slide="next">
+                  <img src="images/arrow_black_right.png" alt="right">
+                  <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span> -->
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </section>
     </main>
     <footer>
