--- a/2-homepage.html
+++ b/2-homepage.html
@@ -135,16 +135,44 @@
                 <!-- inner carousel -->
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/thumbnail_1.jpg" alt="">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/thumbnail_2.jpg" alt="">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/thumbnail_3.jpg" alt="">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/thumbnail_4.jpg" alt="">
+                    <div class="row">
+                      <div class="col-md-3">
+                        <div class="single-box">
+                          <div class="img-area"><img src="images/thumbnail_1.jpg" alt=""></div>
+                          <div class="img-text">
+                            <h2>Natural Smile</h2>
+                            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+
+                          <div class="img-area"><img src="images/thumbnail_2.jpg" alt=""></div>
+                          <div class="img-text">
+                            <h2>Happy Smile</h2>
+                            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                          </div>
+
+                      </div>
+                      <div class="col-md-3">
+                        <div class="single-box">
+                          <div class="img-area"><img src="images/thumbnail_3.jpg" alt=""></div>
+                          <div class="img-text">
+                            <h2>Sad Smile</h2>
+                            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="single-box">
+                          <div class="img-area"><img src="images/thumbnail_4.jpg" alt=""></div>
+                          <div class="img-text">
+                            <h2>Diagonal Smile</h2>
+                            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <!-- carousel control -->
