--- a/1-homepage.html
+++ b/1-homepage.html
@@ -109,12 +109,14 @@
 
           <!-- Carousel controls -->
           <a data-bs-target="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
-            <img src="images/arrow_white_left.png" alt="left">
+            <img src="images/arrow_white_left.png" alt="left" aria-hidden="true">
+            <span class="sr-only">Previous</span>
             <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span> -->
           </a>
           <a data-bs-target="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
-            <img src="images/arrow_white_right.png" alt="right">
+            <img src="images/arrow_white_right.png" alt="right" aria-hidden="true">
+            <span class="sr-only">Next</span>
             <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span> -->
           </a>
