--- a/1-homepage.html
+++ b/1-homepage.html
@@ -6,8 +6,9 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Coiny&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.6.0/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -93,7 +94,7 @@
               </div>
             </div>
             <!-- third item -->
-            <div class="carousel-item active">
+            <div class="carousel-item">
               <div class="container row align-items-center">
                 <div class="col-2 offset-1">
                   <img src="images/profile_5.jpg" alt="weather" class="rounded-circle small-img">
@@ -108,13 +109,13 @@
           </div>
 
           <!-- Carousel controls -->
-          <a data-bs-target="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+          <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
             <img src="images/arrow_white_left.png" alt="left" aria-hidden="true">
             <span class="sr-only">Previous</span>
             <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span> -->
           </a>
-          <a data-bs-target="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
+          <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
             <img src="images/arrow_white_right.png" alt="right" aria-hidden="true">
             <span class="sr-only">Next</span>
             <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
