added video changes for different screen sizes

--- a/2-homepage.html
+++ b/2-homepage.html
@@ -138,40 +138,41 @@
                 </div>
                 <!-- inner carousel -->
                 <div class="carousel-inner">
+                  <!-- first carousel item -->
                   <div class="carousel-item active">
                     <div class="row">
-                      <div class="col-md-3">
+                      <div class="col-12 col-md-6 col-lg-3">
                         <div class="single-box">
                           <div class="img-area"><img src="images/thumbnail_1.jpg" alt=""></div>
                           <div class="img-text">
-                            <h2>Natural Smile</h2>
+                            <h3>Natural Smile</h3>
                             <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                           </div>
                         </div>
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-12 col-md-6 col-lg-3">
 
                           <div class="img-area"><img src="images/thumbnail_2.jpg" alt=""></div>
                           <div class="img-text">
-                            <h2>Happy Smile</h2>
+                            <h3>Happy Smile</h3>
                             <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                           </div>
 
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-12 col-md-6 col-lg-3">
                         <div class="single-box">
                           <div class="img-area"><img src="images/thumbnail_3.jpg" alt=""></div>
                           <div class="img-text">
-                            <h2>Sad Smile</h2>
+                            <h3>Sad Smile</h3>
                             <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                           </div>
                         </div>
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-12 col-md-6 col-lg-3">
                         <div class="single-box">
                           <div class="img-area"><img src="images/thumbnail_4.jpg" alt=""></div>
                           <div class="img-text">
-                            <h2>Diagonal Smile</h2>
+                            <h3>Diagonal Smile</h2>
                             <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                           </div>
                         </div>
@@ -180,12 +181,12 @@
                   </div>
                 </div>
                 <!-- carousel control -->
-                <a data-bs-target="#videoCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+                <a href="#videoCarousel" class="carousel-control-prev" role="button" data-slide="prev">
                   <img src="images/arrow_black_left.png" alt="left">
                   <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span> -->
                 </a>
-                <a data-bs-target="#videoCarousel" class="carousel-control-next" role="button" data-slide="next">
+                <a href="#videoCarousel" class="carousel-control-next" role="button" data-slide="next">
                   <img src="images/arrow_black_right.png" alt="right">
                   <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span> -->
