added correct button shape

--- a/0-homepage.html
+++ b/0-homepage.html
@@ -22,9 +22,9 @@
         <img src="images/logo.png" alt="logo" class="smile-school">
       </div>
       <div class="col-sm container">
-        <a href="#" class="text-white">COURSES</a>
-        <a href="#" class="text-white">PRICING</a>
-        <a href="#" class="text-white">LOGIN</a>
+        <a href="#" class="text-white mx-3">COURSES</a>
+        <a href="#" class="text-white mx-3">PRICING</a>
+        <a href="#" class="text-white mx-3">LOGIN</a>
       </div>
     </header>
     <main>
