--- a/1-homepage.html
+++ b/1-homepage.html
@@ -40,23 +40,23 @@
           </div>
           <button class="btn text-white">REGISTER FOR FREE</button>
           <h3 class="mt-5 mb-5">Learn from the pros</h3>
-          <div class="container card-deck text-white">
-            <div class="container card bg-transparent border-0 mt-5 align-items-center">
+          <div class="container card-columns text-white row">
+            <div class="col-12 col-md-6 col-lg-3 card bg-transparent border-0 mt-5 align-items-center">
               <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Phillip Massey</h3>
               <p class="card-text">« Smile of the year » 2018 - 2019</p>
             </div>
-            <div class="container card bg-transparent border-0 mt-5 align-items-center">
+            <div class="col-12 col-md-6 col-lg-3 card bg-transparent border-0 mt-5 align-items-center">
               <img src="images/profile_2.jpg" alt="nannie" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Nannie Lawrence</h3>
               <p class="card-text">Best « little smile » 2017</p>
             </div>
-            <div class="container card bg-transparent border-0 mt-5 align-items-center">
+            <div class="col-12 col-md-6 col-lg-3 card bg-transparent border-0 mt-5 align-items-center">
               <img src="images/profile_3.jpg" alt="bruce" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Bruce Walters</h3>
               <p class="card-text">Best « Friend Smile » live performance 2019</p>
             </div>
-            <div class="container card bg-transparent border-0 mt-5 align-items-center">
+            <div class="col-12 col-md-6 col-lg-3 card bg-transparent border-0 mt-5 align-items-center">
               <img src="images/profile_4.jpg" alt="henry" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Henry Hughes</h3>
               <p class="card-text">« 24h smiles » winner 2016 - 2019</p>
