--- a/2-homepage.html
+++ b/2-homepage.html
@@ -22,9 +22,9 @@
         <img src="images/logo.png" alt="logo" class="smile-school">
       </div>
       <div class="col-sm container">
-        <a href="#" class="text-white">COURSES</a>
-        <a href="#" class="text-white">PRICING</a>
-        <a href="#" class="text-white">LOGIN</a>
+        <a href="#" class="text-white mx-3">COURSES</a>
+        <a href="#" class="text-white mx-3">PRICING</a>
+        <a href="#" class="text-white mx-3">LOGIN</a>
       </div>
     </header>
     <main>
@@ -38,25 +38,25 @@
             <p class="m-3">GRIN</p>
             <p class="m-3">LAUGH</p>
           </div>
-          <button class="btn text-white">REGISTER FOR FREE</button>
+          <button class="btn btn-success rounded-pill text-white">REGISTER FOR FREE</button>
           <h3 class="mt-5 mb-5">Learn from the pros</h3>
-          <div class="container card-deck text-white row">
-            <div class="col-12 col-md-6 col container card bg-transparent border-0 mt-5 align-items-center">
+          <div class="container card-columns text-white row">
+            <div class="col-12 col-md-6 col-lg-3 card bg-transparent border-0 mt-5 align-items-center">
               <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Phillip Massey</h3>
               <p class="card-text">« Smile of the year » 2018 - 2019</p>
             </div>
-            <div class="col-12 col-md-6 col container card bg-transparent border-0 mt-5 align-items-center">
+            <div class="col-12 col-md-6 col-lg-3 card bg-transparent border-0 mt-5 align-items-center">
               <img src="images/profile_2.jpg" alt="nannie" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Nannie Lawrence</h3>
               <p class="card-text">Best « little smile » 2017</p>
             </div>
-            <div class="col-12 col-md-6 col container card bg-transparent border-0 mt-5 align-items-center">
+            <div class="col-12 col-md-6 col-lg-3 card bg-transparent border-0 mt-5 align-items-center">
               <img src="images/profile_3.jpg" alt="bruce" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Bruce Walters</h3>
               <p class="card-text">Best « Friend Smile » live performance 2019</p>
             </div>
-            <div class="col-12 col-md-6 col container card bg-transparent border-0 mt-5 align-items-center">
+            <div class="col-12 col-md-6 col-lg-3 card bg-transparent border-0 mt-5 align-items-center">
               <img src="images/profile_4.jpg" alt="henry" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Henry Hughes</h3>
               <p class="card-text">« 24h smiles » winner 2016 - 2019</p>
