--- a/2-homepage.html
+++ b/2-homepage.html
@@ -31,7 +31,7 @@
       <section class="homepage-hero text-white text-center mt-5">
         <div class="container mt-5 d-flex flex-column align-items-center justify-content-center">
           <div>
-            <h1>Get schooled</h1>
+            <h1 class="display-1">Get schooled</h1>
           </div>
           <div class="row justify-content-center">
             <p class="m-3">SMILES</p>
