made text bold and added correct color for button

--- a/2-homepage.html
+++ b/2-homepage.html
@@ -31,12 +31,12 @@
       <section class="homepage-hero text-white text-center mt-5">
         <div class="container mt-5 d-flex flex-column align-items-center justify-content-center">
           <div>
-            <h1 class="display-1">Get schooled</h1>
+            <h1 class="display-1 font-weight-bold">Get schooled</h1>
           </div>
           <div class="row justify-content-center">
-            <p class="m-3">SMILES</p>
-            <p class="m-3">GRIN</p>
-            <p class="m-3">LAUGH</p>
+            <p class="m-3 font-weight-bold">SMILES</p>
+            <p class="m-3 font-weight-bold">GRIN</p>
+            <p class="m-3 font-weight-bold">LAUGH</p>
           </div>
           <button class="btn btn-success rounded-pill text-white">REGISTER FOR FREE</button>
           <h3 class="mt-5 mb-5">Learn from the pros</h3>
