made some adjustments to spacing

--- a/2-homepage.html
+++ b/2-homepage.html
@@ -28,19 +28,19 @@
       </div>
     </header>
     <main>
-      <section class="homepage-hero text-white text-center mt-5">
-        <div class="container mt-5 d-flex flex-column align-items-center justify-content-center">
-          <div>
+      <section class="homepage-hero text-white text-center">
+        <div class="position-relative container d-flex flex-column align-items-center">
+          <div class="mt-5">
             <h1 class="display-1 font-weight-bold">Get schooled</h1>
           </div>
           <div class="row justify-content-center">
-            <p class="m-3 font-weight-bold">SMILES</p>
-            <p class="m-3 font-weight-bold">GRIN</p>
-            <p class="m-3 font-weight-bold">LAUGH</p>
+            <p class="mx-3 font-weight-bold">SMILES</p>
+            <p class="mx-3 font-weight-bold">GRIN</p>
+            <p class="mx-3 font-weight-bold">LAUGH</p>
           </div>
-          <button class="btn btn-success rounded-pill text-white">REGISTER FOR FREE</button>
-          <h3 class="mt-5 mb-5">Learn from the pros</h3>
-          <div class="container card-columns text-white row">
+          <button class="my-5 btn btn-success rounded-pill text-white">REGISTER FOR FREE</button>
+          <h3 class="my-5">Learn from the pros</h3>
+          <div class="container card-columns text-white row mt-5">
             <div class="col-12 col-md-6 col-lg-3 card bg-transparent border-0 mt-5 align-items-center">
               <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Phillip Massey</h3>
