--- a/2-homepage.html
+++ b/2-homepage.html
@@ -39,8 +39,11 @@
             <p class="mx-3 font-weight-bold">LAUGH</p>
           </div>
           <button class="my-5 btn btn-success rounded-pill text-white">REGISTER FOR FREE</button>
-          <h3 class="my-5">Learn from the pros</h3>
-          <div class="container card-columns text-white row mt-5">
+          <h3 class="my-5">
+            <span class="font-weight-bold" style="color: #C271FF; font-size: 2rem">Learn</span>
+            <span class="font-weight-light" style="color: #FFF; opacity: 0.9; font-size: 2rem">from the pros</span>
+          </h3>
+          <div class="position-relative container card-columns text-white row mt-5">
             <div class="col-12 col-md-6 col-lg-3 card bg-transparent border-0 mt-5 align-items-center">
               <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Phillip Massey</h3>
