--- a/2-homepage.html
+++ b/2-homepage.html
@@ -72,11 +72,11 @@
           <div class="carousel-inner">
             <!-- first carousel item -->
             <div class="carousel-item active">
-              <div class="container row align-items-center">
-                <div class="col-2 offset-1">
+              <div class="container row align-items-center my-5 justify-content-center">
+                <div class="col-1 col-m-2 offset-lg-1 mr-5">
                   <img src="images/profile_5.jpg" alt="weather" class="rounded-circle small-img">
                 </div>
-                <blockquote class="blockquote col mt-5">
+                <blockquote class="blockquote col-m-3 col-lg-7 mt-5 ml-5">
                   <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
                   <footer class="blockquote-footer text-white">Person Name</footer>
                   <cite title="weather presenter">weather presenter</cite>
