--- a/2-homepage.html
+++ b/2-homepage.html
@@ -145,6 +145,10 @@
                           <div class="img-text">
                             <h3 class="">Natural Smile</h3>
                             <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                            <div class="row">
+                              <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
+                              <h3 class="card-title">Phillip Massey</h3>
+                            </div>
                           </div>
                         </div>
                       </div>
