added first star and made correct size

--- a/2-homepage.html
+++ b/2-homepage.html
@@ -149,6 +149,11 @@
                               <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
                               <h3 class="card-title">Phillip Massey</h3>
                             </div>
+                            <div class="row">
+                              <div>
+                                <img src="images/star_on.png" alt="star_on" class="small-star">
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
