added philip to the other cards

--- a/2-homepage.html
+++ b/2-homepage.html
@@ -145,14 +145,19 @@
                           <div class="img-text">
                             <h3 class="">Natural Smile</h3>
                             <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                            <div class="row">
+                            <div class="row align-items-center justify-content-around">
                               <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
-                              <h3 class="card-title">Phillip Massey</h3>
+                              <h3 class="card-title text-purple">Phillip Massey</h3>
                             </div>
-                            <div class="row">
+                            <div class="row justify-content-around">
                               <div>
                                 <img src="images/star_on.png" alt="star_on" class="small-star">
+                                <img src="images/star_on.png" alt="star_on" class="small-star">
+                                <img src="images/star_on.png" alt="star_on" class="small-star">
+                                <img src="images/star_on.png" alt="star_on" class="small-star">
+                                <img src="images/star_off.png" alt="star_off" class="small-star">
                               </div>
+                              <p class="text-purple">8 min</p>
                             </div>
                           </div>
                         </div>
@@ -164,6 +169,20 @@
                             <h3>Happy Smile</h3>
                             <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                           </div>
+                          <div class="row align-items-center justify-content-around">
+                            <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
+                            <h3 class="card-title text-purple">Phillip Massey</h3>
+                          </div>
+                          <div class="row justify-content-around">
+                            <div>
+                              <img src="images/star_on.png" alt="star_on" class="small-star">
+                              <img src="images/star_on.png" alt="star_on" class="small-star">
+                              <img src="images/star_on.png" alt="star_on" class="small-star">
+                              <img src="images/star_on.png" alt="star_on" class="small-star">
+                              <img src="images/star_off.png" alt="star_off" class="small-star">
+                            </div>
+                            <p class="text-purple">8 min</p>
+                          </div>
 
                       </div>
                       <div class="col-12 col-sm-6 col-md-2">
@@ -173,6 +192,21 @@
                             <h3>Sad Smile</h3>
                             <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                           </div>
+                          <div class="row align-items-center justify-content-around">
+                            <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
+                            <h3 class="card-title text-purple">Phillip Massey</h3>
+                          </div>
+                          <div class="row justify-content-around">
+                            <div>
+                              <img src="images/star_on.png" alt="star_on" class="small-star">
+                              <img src="images/star_on.png" alt="star_on" class="small-star">
+                              <img src="images/star_on.png" alt="star_on" class="small-star">
+                              <img src="images/star_on.png" alt="star_on" class="small-star">
+                              <img src="images/star_off.png" alt="star_off" class="small-star">
+                            </div>
+                            <p class="text-purple">8 min</p>
+                          </div>
+
                         </div>
                       </div>
                       <div class="col-12 col-sm-6 col-md-2">
@@ -182,6 +216,21 @@
                             <h3>Diagonal Smile</h2>
                             <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                           </div>
+                          <div class="row align-items-center justify-content-around">
+                            <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
+                            <h3 class="card-title text-purple">Phillip Massey</h3>
+                          </div>
+                          <div class="row justify-content-around">
+                            <div>
+                              <img src="images/star_on.png" alt="star_on" class="small-star">
+                              <img src="images/star_on.png" alt="star_on" class="small-star">
+                              <img src="images/star_on.png" alt="star_on" class="small-star">
+                              <img src="images/star_on.png" alt="star_on" class="small-star">
+                              <img src="images/star_off.png" alt="star_off" class="small-star">
+                            </div>
+                            <p class="text-purple">8 min</p>
+                          </div>
+
                         </div>
                       </div>
                     </div>
