--- a/2-homepage.html
+++ b/2-homepage.html
@@ -129,7 +129,8 @@
 
       <!-- video section -->
       <section class="video container text-center">
-        <h3 class="my-5">Most popular tutorials</h3>
+        <h3 class="my-5 font-weight-light" style="opacity: 0.9; font-size: 2rem">Most <span class="font-weight-bold" style="color: #C271FF; font-size: 2rem">popular</span>
+          tutorials</h3>
         <div class="container mb-5">
           <div class="row">
             <div>
