--- a/2-homepage.html
+++ b/2-homepage.html
@@ -186,7 +186,7 @@
                           </div>
 
                       </div>
-                      <div class="col-12 col-sm-6 col-md-2">
+                      <div class="col-12 col-sm-6 col-md-2 d-none d-md-block">
                         <div class="single-box">
                           <div class="img-area"><img src="images/thumbnail_3.jpg" alt=""></div>
                           <div class="img-text">
@@ -210,7 +210,7 @@
 
                         </div>
                       </div>
-                      <div class="col-12 col-sm-6 col-md-2">
+                      <div class="col-12 col-sm-6 col-md-2 d-none d-md-block">
                         <div class="single-box">
                           <div class="img-area"><img src="images/thumbnail_4.jpg" alt=""></div>
                           <div class="img-text">
