sized smile correctly

--- a/2-homepage.html
+++ b/2-homepage.html
@@ -163,7 +163,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-12 col-sm-6 col-md-2">
+                      <div class="col-12 col-sm-6 col-md-2 d-none d-sm-block">
 
                           <div class="img-area"><img src="images/thumbnail_2.jpg" alt=""></div>
                           <div class="img-text">
