added background and button and made text white

--- a/3-homepage.html
+++ b/3-homepage.html
@@ -255,19 +255,20 @@
 
       </section>
       <!--....... membership section........................ -->
-      <section class="membership">
+      <section class="membership text-white">
         <div class="container align-items-center text-center">
           <h3><span>Free </span>membership</h3>
             <div class="row">
               <div class="col-md-3 justify-content-center">
                 <img src="images/smile_on.png" alt="purple_smile" class="smile_on-area">
                 <div class="img-text">
-                  <h3>Diagonal Smile</h2>
-                  <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                  <h3>Lorem ipsum</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
               </div>
             </div>
-        </div>
+            <button class="my-5 btn btn-success rounded-pill text-white">REGISTER FOR FREE</button>
+          </div>
       </section>
     </main>
     <footer>
